@@ -9,6 +9,7 @@ class Net::SSLeay::PEM {
   use Net::SSLeay::X509;
   use Net::SSLeay::X509_CRL;
   use Net::SSLeay::DH;
+  use Net::SSLeay::EVP_PKEY;
   
   # Class Methods
   native static method read_bio_X509 : Net::SSLeay::X509 ($bp : Net::SSLeay::BIO);
@@ -17,4 +18,6 @@ class Net::SSLeay::PEM {
   
   native static method read_bio_DHparams : Net::SSLeay::DH ($bp : Net::SSLeay::BIO);
   
+  native static method read_bio_PrivateKey : Net::SSLeay::EVP_PKEY ($bp : Net::SSLeay::BIO);
+                                  
 }
